@@ -76,9 +76,6 @@
 /* Define to 1 if you have the `strdup' function. */
 #undef HAVE_STRDUP
 
-/* Define to 1 if you have the `strerror' function. */
-#undef HAVE_STRERROR
-
 /* Define to 1 if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
 
@@ -178,6 +175,18 @@
 #undef SOCKLEN_T
 
 /* XXX */
+#undef SPEC_BYTE
+
+/* XXX */
+#undef SPEC_DWORD
+
+/* XXX */
+#undef SPEC_QWORD
+
+/* XXX */
+#undef SPEC_WORD
+
+/* XXX */
 #undef STATISTIC
 
 /* Define to 1 if you have the ANSI C header files. */
@@ -185,19 +194,15 @@
 
 /* XXX */
 #undef TYPE_BYTE
-#undef SPEC_BYTE
 
 /* XXX */
 #undef TYPE_DWORD
-#undef SPEC_DWORD
 
 /* XXX */
 #undef TYPE_QWORD
-#undef SPEC_QWORD
 
 /* XXX */
 #undef TYPE_WORD
-#undef SPEC_WORD
 
 /* XXX */
 #undef UCSOCKET_T
